--- a/equipment/index.html
+++ b/equipment/index.html
@@ -8,9 +8,9 @@
 
   gtag('config', 'G-PGPTWMVZ53');
 </script>
-	<title>Contact us - Antarctic Studios</title>
+	<title>Studio Equipment - Antarctic Studios</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Antarctic Studios - Contact information page">
+	<meta name="description" content="Antarctic Studios - Equipment and Inventory">
 	<meta name="keywords" content="radio, station, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
@@ -55,8 +55,8 @@
 			<!-- Main Menu -->
 			<ul class="main-menu">
 				<li><a href="..">Home</a></li>
-				<li class="active"><a href="contact">Contact and Booking Info</a></li>
-				<li><a href="equipment">Studio Equipment</a></li>
+				<li><a href="contact">Contact and Booking Info</a></li>
+				<li class="active"><a href="equipment">Studio Equipment</a></li>
 			</ul>
 			<!-- Social Links -->
 			<div class="header-social-links">
@@ -71,57 +71,133 @@
 
 
 	<!--  section -->
-	<section class="page-info-section set-bg" data-setbg="img/page-info-bg.jpg">
+	<section class="hero set-bg" data-setbg="img/page-info-bg.jpg">
+		<br>
+		<br>
+		<div class="text-center">
+			<h2>Studio Inventory</h2>	
+			<h3>Microphones</h3><br>
+		</div>
+	
 		<div class="container">
-			<div class="text-center">
-				<h2>Contact</h2>	
-				<h3>Rates for all services are available upon request. Inquire today - we would love to help bring your project to life and help fit your artistic vision!</h3>
-				<h6>All services require a minimum 30%, non-refundable deposit paid 24 hours prior to session start time. <br>
-				Failure to pay in advance, or sessions booked less than 24 hours in advance are subject to a 10% markup in service cost.<br>
-				Re-booking for a no-show requires a 50% down deposit.</h6>
-				<br>
-				<br>
+			<div class="row">
+				<div class="col-left">
+					<h4>Condensers</h4>
+					<h6>- Warm Audio WA-251 <br>
+						- MXL V69 Mogami <br>
+						- Dachman Audio DA47FET <br>
+						- Dachman Audio DA87SE <br>
+						- Warm Audio WA84 Stereo<br>
+						- Audio Technica AT4033a  <br>
+						- Sonarworks omni measurement microphone <br>
+						- Apex 565 clip-on microphone
+					</h6>
+				</div>
+				<div class="col-right">
+					<h4>Dynamics & Ribbon</h4>
+					<h6>- Shure SM7b <br>
+						- ElectroVoice RE20 & RE320 <br>
+						- ElectroVoice N/D 257A <br>
+						- AKG D112 <br>
+						- MXL R144 (x2) <br>
+						- Shure SM57 & SM58 <br>
+						- Custom lofi handset phone microphone
+					</h6>
+				</div>
 			</div>
 		</div>
+
+		<div class="text-center">
+			<h3>Rack Gear, Synths & Guitar Gear</h3><br>
+			
+		</div>
+
+
+		<div class="container">
+			<div class="row">
+				<div class="col-left">
+					<h4>Interface & Outboard Gear</h4>
+					<h6>- RME UFXIII <br>
+						- Behringer ADA8200 (x2) <br>
+						- Sony DPS-V55 stereo FX unit<br>
+						- N-SONIC N73 Preamp (Neve style)<br>
+						- DIYRE CP5 <br>
+						- SPL BiG stereo widener<br>
+						- LA Audio MLX20 dual preamp <br>
+						- AudioScape SSL Bus Compressor <br>
+						- ART Pro VLA II<br>
+						- Shure M267 mixer/limiter <br>
+					</h6>
+				</div>
+				<div class="col-right">
+					<h4>Synths & Guitars</h4>
+					<h6>- Expressive E Osmose <br>
+						- ASM Hydrasynth <br>
+						- Roland RD-2000 <br>
+						- Roland AX Edge <br>
+						- Moog Minitaur <br>
+						- Yamaha Reface YC Organ <br>
+						- Maschine MK1 pad controller <br>
+						- Peavey 6505+ tube amplifier <br>
+						- Hughes & Kettner Spirit of Rock <br> 
+						- Orange Micro Dark <br>
+						- Boss HM2 & MT2 overdrive pedals <br> 
+						- Joyo Tauren (Klon clone) <br> 
+						- Electro-Harmonix Big Muff fuzz pedal (Soviet era) <br>
+						- 
+					</h6>
+				</div>
+			</div>
+		</div>
+
+		<div class="text-center">
+			<h3>Software</h3><br>
+			<h6>- FabFilter suite (Q3, C2, L2, R, MB, Saturn, Timeless) <br>
+				- Izotope (Ozone , Nectar, Neutron, RX, VocalSynth, Trash)<br>
+				- Native Instruments (Kontakt, Battery)<br>
+				- Neural DSP (Plini, Petrucci, Rabea)<br>
+				- Universal Audio (1176, DBX160, Fairchild, LA2A, Plate Verb) <br>
+				- Oeksound (Soothe2, Spiff)<br>
+				- Harrison MixBus<br>
+				- Reaper<br>
+				- Softsynths (Equator2, Mercury6, Massive, MassiveX)<br>
+				And more! Too much to fit on here. 
+			</h6>
+		</div>
+
+
+
+
+
+
 	</section>
+	
+	<style>
+		.container {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+		}
+	
+		.row {
+			display: flex;
+			justify-content: center; /* Centers the columns horizontally */
+			gap: 50px; /* Adjusts the space between the two columns */
+		}
+	
+		.col-left, .col-right {
+			padding: 20px;
+			flex: 1; /* Ensures both columns are equal in width */
+			max-width: 400px; /* Optional: Limit the maximum width of the columns */
+		}
+	
+		.text-center {
+			text-align: center;
+		}
+	</style>
 	<!--  section end -->
 	
-
-	<!-- contact section -->
-	<section class="contact-section">
-		<div class="container">
-			
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<div class="section-title text-center">
-				<h2>Get in Touch</h2>	
-				
-			</div>
-			<form class="contact-form" action="https://formspree.io/f/maylelbk" method="POST">
-				<div class="row">
-					<div class="col-lg-4">
-						<input type="text" placeholder="Your Name" name="name">
-					</div>
-					<div class="col-lg-4">
-						<input type="text" placeholder="Your E-mail" name="_replyto">
-					</div>
-					<div class="col-lg-4">
-						<input type="text" placeholder="Subject" name="subject">
-					</div>
-					<div class="col-lg-12">
-						<input type="text" placeholder="Message" name="msg">
-						<div class="text-center">
-							<button class="site-btn" value="Send">SEND IT!</button>
-						</div>
-					</div>	
-				</div>
-			</form>
-		</div>
-	</section>
 	<!--  contact section end -->
 
 
