--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 			<ul class="main-menu">
 				<li class="active"><a href="..">Home</a></li>
 				<li><a href="contact">Contact and Booking Info</a></li>
+				<li><a href="equipment">Studio Equipment</a></li>
 			</ul>
 			<!-- Social Links -->
 			<div class="header-social-links">
