--- a/index - Copy.html
+++ b/index - Copy.html
@@ -56,7 +56,6 @@
 			<ul class="main-menu">
 				<li><a href="..">Home</a></li>
 				<li class="active"><a href="contact">Contact and Booking Info</a></li>
-				<li><a href="equipment">Studio Equipment</a></li>
 			</ul>
 			<!-- Social Links -->
 			<div class="header-social-links">
@@ -113,7 +112,7 @@
 						<input type="text" placeholder="Subject" name="subject">
 					</div>
 					<div class="col-lg-12">
-						<input type="text" placeholder="Message" name="msg">
+						<textarea placeholder="Message"></textarea>
 						<div class="text-center">
 							<button class="site-btn" value="Send">SEND IT!</button>
 						</div>
