--- a/equipment/index.html
+++ b/equipment/index.html
@@ -83,94 +83,91 @@
 			<div class="row">
 				<div class="col-left">
 					<h4>Condensers</h4>
-					<h6>- Warm Audio WA-251 <br>
-						- MXL V69 Mogami <br>
+					<h6>
+						- Apex 565 clip-on microphone <br>
+						- Audio Technica AT4033a  <br>
 						- Dachman Audio DA47FET <br>
 						- Dachman Audio DA87SE <br>
+						- MXL V69 Mogami <br>
+						- Sonarworks omni mic <br>
+						- Warm Audio WA-251 <br>
 						- Warm Audio WA84 Stereo<br>
-						- Audio Technica AT4033a  <br>
-						- Sonarworks omni measurement microphone <br>
-						- Apex 565 clip-on microphone
 					</h6>
 				</div>
 				<div class="col-right">
 					<h4>Dynamics & Ribbon</h4>
-					<h6>- Shure SM7b <br>
-						- ElectroVoice RE20 & RE320 <br>
-						- ElectroVoice N/D 257A <br>
+					<h6>
 						- AKG D112 <br>
+						- Custom lofi handset phone microphone <br>
+						- ElectroVoice N/D 257A <br>
+						- ElectroVoice RE20 & RE320 <br>
 						- MXL R144 (x2) <br>
 						- Shure SM57 & SM58 <br>
-						- Custom lofi handset phone microphone
+						- Shure SM7b <br>
 					</h6>
 				</div>
 			</div>
 		</div>
-
+	
 		<div class="text-center">
 			<h3>Rack Gear, Synths & Guitar Gear</h3><br>
-			
 		</div>
-
-
+	
 		<div class="container">
 			<div class="row">
 				<div class="col-left">
 					<h4>Interface & Outboard Gear</h4>
-					<h6>- RME UFXIII <br>
-						- Behringer ADA8200 (x2) <br>
-						- Sony DPS-V55 stereo FX unit<br>
-						- N-SONIC N73 Preamp (Neve style)<br>
-						- DIYRE CP5 <br>
-						- SPL BiG stereo widener<br>
-						- LA Audio MLX20 dual preamp <br>
+					<h6>
+						- ART Pro VLA II <br>
 						- AudioScape SSL Bus Compressor <br>
-						- ART Pro VLA II<br>
+						- Behringer ADA8200 (x2, modded) <br>
+						- DIYRE CP5 <br>
+						- LA Audio MLX20 dual preamp <br>
+						- N-SONIC N73 Preamp (Neve style)<br>
+						- RME UFXIII <br>
 						- Shure M267 mixer/limiter <br>
+						- Sony DPS-V55 stereo FX unit<br>
+						- SPL BiG stereo widener<br>
 					</h6>
 				</div>
 				<div class="col-right">
 					<h4>Synths & Guitars</h4>
-					<h6>- Expressive E Osmose <br>
+					<h6>
 						- ASM Hydrasynth <br>
-						- Roland RD-2000 <br>
-						- Roland AX Edge <br>
-						- Moog Minitaur <br>
-						- Yamaha Reface YC Organ <br>
-						- Maschine MK1 pad controller <br>
-						- Peavey 6505+ tube amplifier <br>
-						- Hughes & Kettner Spirit of Rock <br> 
-						- Orange Micro Dark <br>
-						- Boss HM2 & MT2 overdrive pedals <br> 
-						- Joyo Tauren (Klon clone) <br> 
+						- Boss HM2 & MT2 overdrive pedals <br>
 						- Electro-Harmonix Big Muff fuzz pedal (Soviet era) <br>
-						- 
+						- Expressive E Osmose <br>
+						- Hughes & Kettner Spirit of Rock <br>
+						- Joyo Tauren (Klon clone) <br>
+						- Maschine MK1 pad controller <br>
+						- Moog Minitaur <br>
+						- Orange Micro Dark <br>
+						- Peavey 6505+ tube amplifier <br>
+						- Roland AX Edge <br>
+						- Roland RD-2000 <br>
+						- Yamaha Reface YC Organ <br>
 					</h6>
 				</div>
 			</div>
 		</div>
-
+	
 		<div class="text-center">
 			<h3>Software</h3><br>
-			<h6>- FabFilter suite (Q3, C2, L2, R, MB, Saturn, Timeless) <br>
-				- Izotope (Ozone , Nectar, Neutron, RX, VocalSynth, Trash)<br>
+			<h6>
+				- FabFilter suite (Q3, C2, L2, R, MB, Saturn, Timeless) <br>
+				- Harrison MixBus<br>
+				- Izotope (Ozone, Nectar, Neutron, RX, VocalSynth, Trash)<br>
 				- Native Instruments (Kontakt, Battery)<br>
 				- Neural DSP (Plini, Petrucci, Rabea)<br>
-				- Universal Audio (1176, DBX160, Fairchild, LA2A, Plate Verb) <br>
 				- Oeksound (Soothe2, Spiff)<br>
-				- Harrison MixBus<br>
 				- Reaper<br>
 				- Softsynths (Equator2, Mercury6, Massive, MassiveX)<br>
-				And more! Too much to fit on here. 
+				- Universal Audio (1176, DBX160, Fairchild, LA2A, Plate Verb) <br>
+				And more! Too much to fit on here.
 			</h6>
 		</div>
-
-
-
-
-
-
 	</section>
+	
 	
 	<style>
 		.container {
