--- a/equipment/index.html
+++ b/equipment/index.html
@@ -20,13 +20,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i" rel="stylesheet">
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/jquery-ui.min.css"/>
-	<link rel="stylesheet" href="css/flaticon.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
-	<link rel="stylesheet" href="css/animate.css"/>
+	<link rel="stylesheet" href="../css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="../css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="../css/jquery-ui.min.css"/>
+	<link rel="stylesheet" href="../css/flaticon.css"/>
+	<link rel="stylesheet" href="../css/owl.carousel.css"/>
+	<link rel="stylesheet" href="../css/style.css"/>
+	<link rel="stylesheet" href="../css/animate.css"/>
 
 
 	<!--[if lt IE 9]>
@@ -46,7 +46,7 @@
 		<div class="header-warp">
 			<!-- Site Logo -->
 			<a href="index.html" class="site-logo">
-				<img src="img/logo.png" alt="">
+				<img src="../img/logo.png" alt="">
 			</a>
 			<!-- responsive -->
 			<div class="nav-switch">
