--- a/equipment/index.html
+++ b/equipment/index.html
@@ -261,14 +261,14 @@
 							<p><a href="https://facebook.com/antarcticstudios"><i class="fa fa-facebook"></i> @antarcticstudios </a></p>
 							<p><a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i> alex@antarcticstudios.ca</a></p>
 							<p><i class="fa fa-phone"></i> +1 226 770 0265</p>
-							<img src="img/logo.png" class="footer-logo" alt="">
+							<img src="../img/logo.png" class="footer-logo" alt="">
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-6 ft-widget">
 						
 						<div>
 							
-							<img src="img/logo_fullres.png" >
+							<img src="../img/logo_fullres.png" >
 						</div>
 					</div>
 				</div>
