--- a/equipment/index.html
+++ b/equipment/index.html
@@ -121,17 +121,17 @@
 						- ART Pro VLA II <br>
 						- AudioScape SSL Bus Compressor <br>
 						- Behringer ADA8200 (x2, modded) <br>
-						- DIYRE CP5 <br>
+						- DIYRE CP5 preamp<br>
 						- LA Audio MLX20 dual preamp <br>
 						- N-SONIC N73 Preamp (Neve style)<br>
-						- RME UFXIII <br>
+						- RME UFXIII 192ch audio interface<br>
 						- Shure M267 mixer/limiter <br>
 						- Sony DPS-V55 stereo FX unit<br>
 						- SPL BiG stereo widener<br>
 					</h6>
 				</div>
 				<div class="col-right">
-					<h4>Synths & Guitars</h4>
+					<h4>Synths & Guitar hardware </h4>
 					<h6>
 						- ASM Hydrasynth <br>
 						- Boss HM2 & MT2 overdrive pedals <br>
@@ -145,6 +145,7 @@
 						- Peavey 6505+ tube amplifier <br>
 						- Roland AX Edge <br>
 						- Roland RD-2000 <br>
+						- Suhr 100W Reactive Loadbox <br>
 						- Yamaha Reface YC Organ <br>
 					</h6>
 				</div>
