--- a/equipment/index.html
+++ b/equipment/index.html
@@ -116,15 +116,20 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-left">
-					<h4>Interface & Outboard Gear</h4>
+					<h4>Interface, Monitoring & Outboard Gear</h4>
 					<h6>
+						- RME UFXIII 188ch audio interface<br>
+						- Behringer ADA8200 (x2, modded) <br>
+						- Yorkville YSM6 with SonarWorks <br>
+						- Technics 3-way HiFi speakers <br>
+						- ART 4ch headphone amplifier <br>
+						- Audio-Technica ATH-M50x headphones <br>
+						<br>
 						- ART Pro VLA II <br>
 						- AudioScape SSL Bus Compressor <br>
-						- Behringer ADA8200 (x2, modded) <br>
 						- DIYRE CP5 preamp<br>
 						- LA Audio MLX20 dual preamp <br>
 						- N-SONIC N73 Preamp (Neve style)<br>
-						- RME UFXIII 192ch audio interface<br>
 						- Shure M267 mixer/limiter <br>
 						- Sony DPS-V55 stereo FX unit<br>
 						- SPL BiG stereo widener<br>
@@ -134,19 +139,24 @@
 					<h4>Synths & Guitar hardware </h4>
 					<h6>
 						- ASM Hydrasynth <br>
+						- Expressive E Osmose <br>
+						- Roland AX Edge <br>
+						- Roland RD-2000 88 weighted key <br>
+						- Yamaha Reface YC Organ <br>
+						<br>
+						- Behringer X-Touch motorized fader surface <br>
 						- Boss HM2 & MT2 overdrive pedals <br>
 						- Electro-Harmonix Big Muff fuzz pedal (Soviet era) <br>
-						- Expressive E Osmose <br>
 						- Hughes & Kettner Spirit of Rock <br>
 						- Joyo Tauren (Klon clone) <br>
 						- Maschine MK1 pad controller <br>
 						- Moog Minitaur <br>
 						- Orange Micro Dark <br>
 						- Peavey 6505+ tube amplifier <br>
-						- Roland AX Edge <br>
-						- Roland RD-2000 <br>
+						- Radial ProRMP Reamp box <br>
+						- Radial ProDI Passive DI <br>
+						- RNDI Active DI <br>
 						- Suhr 100W Reactive Loadbox <br>
-						- Yamaha Reface YC Organ <br>
 					</h6>
 				</div>
 			</div>
