--- a/equipment/index.html
+++ b/equipment/index.html
@@ -82,7 +82,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-left">
-					<h4>Condensers</h4>
+					<h4>Condensers</h4><br>
 					<h6>
 						- Apex 565 clip-on microphone <br>
 						- Audio Technica AT4033a  <br>
@@ -95,7 +95,7 @@
 					</h6>
 				</div>
 				<div class="col-right">
-					<h4>Dynamics & Ribbon</h4>
+					<h4>Dynamics & Ribbon</h4><br>
 					<h6>
 						- AKG D112 <br>
 						- Custom lofi handset phone microphone <br>
@@ -116,7 +116,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-left">
-					<h4>Interface, Monitoring & Outboard Gear</h4>
+					<h4>Interface, Monitoring & Outboard Gear</h4> <br>
 					<h6>
 						- RME UFXIII 188ch audio interface<br>
 						- Behringer ADA8200 (x2, modded) <br>
@@ -136,10 +136,11 @@
 					</h6>
 				</div>
 				<div class="col-right">
-					<h4>Synths & Guitar hardware </h4>
+					<h4>Synths & Guitar hardware </h4> <br>
 					<h6>
 						- ASM Hydrasynth <br>
 						- Expressive E Osmose <br>
+						- Moog Minitaur <br>
 						- Roland AX Edge <br>
 						- Roland RD-2000 88 weighted key <br>
 						- Yamaha Reface YC Organ <br>
@@ -150,7 +151,6 @@
 						- Hughes & Kettner Spirit of Rock <br>
 						- Joyo Tauren (Klon clone) <br>
 						- Maschine MK1 pad controller <br>
-						- Moog Minitaur <br>
 						- Orange Micro Dark <br>
 						- Peavey 6505+ tube amplifier <br>
 						- Radial ProRMP Reamp box <br>
