--- a/equipment/index.html
+++ b/equipment/index.html
@@ -56,7 +56,7 @@
 			<ul class="main-menu">
 				<li><a href="..">Home</a></li>
 				<li><a href="../contact">Contact and Booking Info</a></li>
-				<li class="active"><a href="equipment">Studio Equipment</a></li>
+				<li class="active"><a href=".">Studio Equipment</a></li>
 			</ul>
 			<!-- Social Links -->
 			<div class="header-social-links">
