--- a/equipment/index.html
+++ b/equipment/index.html
@@ -147,6 +147,7 @@
 						<br>
 						- Behringer X-Touch motorized fader surface <br>
 						- Boss HM2 & MT2 overdrive pedals <br>
+						- Boss RC-20 Loop Pedal <br>
 						- Electro-Harmonix Big Muff fuzz pedal (Soviet era) <br>
 						- Hughes & Kettner Spirit of Rock <br>
 						- Joyo Tauren (Klon clone) <br>
@@ -173,6 +174,8 @@
 				- Oeksound (Soothe2, Spiff)<br>
 				- Reaper<br>
 				- Softsynths (Equator2, Mercury6, Massive, MassiveX)<br>
+				- SonarWorks SoundID room & headphone correction <br>
+				- SSL Native Bus Compressor & Channel Strip <br>
 				- Universal Audio (1176, DBX160, Fairchild, LA2A, Plate Verb) <br>
 				And more! Too much to fit on here.
 			</h6>
