--- a/equipment/index.html
+++ b/equipment/index.html
@@ -139,25 +139,29 @@
 					<h4>Synths & Guitar hardware </h4> <br>
 					<h6>
 						- ASM Hydrasynth <br>
+						- Behringer Model15 <br>
 						- Expressive E Osmose <br>
 						- Moog Minitaur <br>
 						- Roland AX Edge <br>
 						- Roland RD-2000 88 weighted key <br>
 						- Yamaha Reface YC Organ <br>
 						<br>
+						- Hughes & Kettner Spirit of Rock <br>
+						- Orange Micro Dark <br>
+						- Marshall Origin 20 tube amplifier <br>
+						- Peavey 6505+ tube amplifier <br>
+						- Suhr 100W Reactive Loadbox <br>
+						<br>
 						- Behringer X-Touch motorized fader surface <br>
 						- Boss HM2 & MT2 overdrive pedals <br>
 						- Boss RC-20 Loop Pedal <br>
 						- Electro-Harmonix Big Muff fuzz pedal (Soviet era) <br>
-						- Hughes & Kettner Spirit of Rock <br>
 						- Joyo Tauren (Klon clone) <br>
 						- Maschine MK1 pad controller <br>
-						- Orange Micro Dark <br>
-						- Peavey 6505+ tube amplifier <br>
 						- Radial ProRMP Reamp box <br>
 						- Radial ProDI Passive DI <br>
 						- RNDI Active DI <br>
-						- Suhr 100W Reactive Loadbox <br>
+						
 					</h6>
 				</div>
 			</div>
