Update portfolio, add rates and theremin

--- a/contact/index.html
+++ b/contact/index.html
@@ -55,7 +55,7 @@
 			<!-- Main Menu -->
 			<ul class="main-menu">
 				<li><a href="..">Home</a></li>
-				<li class="active"><a href="contact">Contact and Booking Info</a></li>
+				<li class="active"><a href="contact">Rates, Contact and Booking Info</a></li>
 				<li><a href="equipment">Studio Equipment</a></li>
 			</ul>
 			<!-- Social Links -->
@@ -75,11 +75,18 @@
 		<div class="container">
 			<div class="text-center">
 				<h2>Contact</h2>	
-				<h3>Rates for all services are available upon request. Inquire today - we would love to help bring your project to life and help fit your artistic vision!</h3>
 				<h6>All services require a minimum 30%, non-refundable deposit paid 24 hours prior to session start time. <br>
 				Failure to pay in advance, or sessions booked less than 24 hours in advance are subject to a 10% markup in service cost.<br>
 				Re-booking for a no-show requires a 50% down deposit.</h6>
 				<br>
+				<b><u><h4>Recording</b> </u></h4><br>
+				$60 / hr, $300 / day <br> <br>
+				<b><u><h4>Mixing & Mastering </b>  </u></h4><br> 
+				$200 / song <br> <br>
+				<b><u><h4>Keyboard & Sax session work </b>  </u></h4> $200 / song minimum
+
+
+
 				<br>
 			</div>
 		</div>
