--- a/equipment/index.html
+++ b/equipment/index.html
@@ -55,7 +55,7 @@
 			<!-- Main Menu -->
 			<ul class="main-menu">
 				<li><a href="..">Home</a></li>
-				<li><a href="../contact">Contact and Booking Info</a></li>
+				<li><a href="../contact">Rates, Contact and Booking Info</a></li>
 				<li class="active"><a href=".">Studio Equipment</a></li>
 			</ul>
 			<!-- Social Links -->
@@ -141,6 +141,7 @@
 						- ASM Hydrasynth <br>
 						- Behringer Model15 <br>
 						- Expressive E Osmose <br>
+						- Golem Poseidon 4 Theremin <br>
 						- Moog Minitaur <br>
 						- Roland AX Edge <br>
 						- Roland RD-2000 88 weighted key <br>
