--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				<a href="https://instagram.com/antarcticstudios"><i class="fa fa-instagram"></i></a>
 				<a href="https://facebook.com/antarcticstudios"><i class="fa fa-facebook"></i></a>
 				<a href="mailto:alex@antarcticstudios.ca"><i class="fa fa-envelope"></i></a>
-				<a href="https://open.spotify.com/playlist/79QJG7nGPPfzZbyDIhk9g6"><i class="fa fa-spotify"></i></a>
+				<a href="https://open.spotify.com/playlist/0glSJ1pY9F71wONGLjC2eM"><i class="fa fa-spotify"></i></a>
 			</div>
 		</div>
 	</header>
@@ -140,7 +140,9 @@
 				<div class="container">
 					<h3><br>Antarctic Studios</h3>
 					<h2>A comprehensive Canadian audio production studio capable of all your mixing, mastering, audio restoration and recording needs, delivering industry-standard quality at affordable rates.</h2>
-					<h4> <br>   </h4>
+					<h2><br> A full discography can be found on my <a href="https://credits.muso.ai/profile/aaebb6e7-05ed-4003-8c4b-5f5a7020d2d0">verified Muso profile</a>.   </h2>
+
+					
 					
 					<div class="row">
 						  <div class="column">
