Add revision count

--- a/contact/index.html
+++ b/contact/index.html
@@ -82,7 +82,7 @@
 				<b><u><h4>Recording</b> </u></h4><br>
 				$60 / hr, $300 / day <br> <br>
 				<b><u><h4>Mixing & Mastering </b>  </u></h4><br> 
-				$200 / song <br> <br>
+				$200 / song, 3 revisions included. <br> <br>
 				<b><u><h4>Keyboard & Sax session work </b>  </u></h4> $200 / song minimum
 
 
