--- a/contact/index.html
+++ b/contact/index.html
@@ -80,10 +80,12 @@
 				Re-booking for a no-show requires a 50% down deposit.</h6>
 				<br>
 				<b><u><h4>Recording</b> </u></h4><br>
-				$60 / hr, $300 / day <br> <br>
+				<p style="color:white">$60 / hr, $300 / day</p> <br> <br>
 				<b><u><h4>Mixing & Mastering </b>  </u></h4><br> 
-				$200 / song, 3 revisions included. <br> <br>
-				<b><u><h4>Keyboard & Sax session work </b>  </u></h4> $200 / song minimum
+				<p style="color:white">$200 / song, 3 revisions included. </p><br> <br>
+				<b><u><h4>Keyboard & Sax session work </b>  </u></h4>
+				
+				<p style="color:white">$200 / song minimum</p><br><br>
 
 
 
