--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				<div class="container">
 					<h3><br>Antarctic Studios</h3>
 					<h2>A comprehensive Canadian audio production studio capable of all your mixing, mastering, audio restoration and recording needs, delivering industry-standard quality at affordable rates.</h2>
-					<h2><br> A full discography can be found on my <a href="https://credits.muso.ai/profile/aaebb6e7-05ed-4003-8c4b-5f5a7020d2d0">verified Muso profile</a>.   </h2>
+					<h2><br> A full discography can be found on my <a href="https://credits.muso.ai/profile/aaebb6e7-05ed-4003-8c4b-5f5a7020d2d0">verified Muso profile</a>.   </h2><br><br>
 
 					
 					
