--- a/contact/index.html
+++ b/contact/index.html
@@ -79,10 +79,10 @@
 				Failure to pay in advance, or sessions booked less than 24 hours in advance are subject to a 10% markup in service cost.<br>
 				Re-booking for a no-show requires a 50% down deposit.</h6>
 				<br>
-				<b><u><h4>Recording</b> </u></h4><br>
-				<p style="color:white">$60 / hr, $300 / day</p> <br> <br>
-				<b><u><h4>Mixing & Mastering </b>  </u></h4><br> 
-				<p style="color:white">$200 / song, 3 revisions included. </p><br> <br>
+				<b><u><h4>Recording</b> </u></h4>
+				<p style="color:white">$60 / hr, $300 / day</p> 
+				<b><u><h4>Mixing & Mastering </b>  </u></h4>
+				<p style="color:white">$200 / song, 3 revisions included. </p>
 				<b><u><h4>Keyboard & Sax session work </b>  </u></h4>
 				
 				<p style="color:white">$200 / song minimum</p><br><br>
