--- a/index.html
+++ b/index.html
@@ -207,22 +207,32 @@
 						<audio controls controlsList="nodownload">
 							<source src="audio/birdseyeview.mp3" type="audio/mp3">
 						</audio>
-						<h4><br>Robot Philosopher - Prosthesis - <i>Instrumental post rock</i></h4> 
+						<h4><br>McVittie - Overload - <i>Instrumental electronic</i></h4> 
+						<h5><i>Produced, recorded, mixed, and mastered</i></h5>
+						<audio controls controlsList="nodownload">
+							<source src="audio/Overload.mp3" type="audio/mp3">
+						</audio>
+						<h4><br>Hayati Shah - Tonight's No Good, How About Wednesday - <i>Pop</i></h4> 
+						<h5><i>Mixed & mastered</i></h5>
+						<audio controls controlsList="nodownload">
+							<source src="audio/tonightnogood.mp3" type="audio/mp3">
+						</audio>
+						<!--h4><br>Robot Philosopher - Prosthesis - <i>Instrumental post rock</i></h4> 
 						<h5><i>Keyboards & orchestral programming, mixed and mastered</i></h5>
 						<audio controls controlsList="nodownload">
 							<source src="audio/prosthesis.mp3" type="audio/mp3">
-						</audio>
+						</audio-->
 						
 						<h4><br>Gaston - Tear Us Apart - <i>Pop punk</i></h4> 
 						<h5><i>Mixed and mastered</i></h5>
 						<audio controls controlsList="nodownload">
 							<source src="audio/tearusapart.mp3" type="audio/mp3">
 						</audio>
-						<h4><br>McVittie - One Up - <i>Instrumental electronic</i></h4> 
+						<!--h4><br>McVittie - One Up - <i>Instrumental electronic</i></h4> 
 						<h5><i>Produced, recorded, mixed, and mastered</i></h5>
 						<audio controls controlsList="nodownload">
 							<source src="audio/oneup.mp3" type="audio/mp3">
-						</audio>
+						</audio-->
 						<!--h4><br>Benjamin Sigerson - Beyond The Blue Forever - <i>Choral</i></h4> 
 						<h5><i>Edited, mixed, and mastered</i></h5>
 						<audio controls controlsList="nodownload">
