--- a/equipment/index.html
+++ b/equipment/index.html
@@ -139,19 +139,20 @@
 					<h4>Synths & Guitar hardware </h4> <br>
 					<h6>
 						- ASM Hydrasynth <br>
-						- Behringer Model15 <br>
+						- Behringer Model15 semi modular synth <br>
 						- Expressive E Osmose <br>
 						- Golem Poseidon 4 Theremin <br>
-						- Moog Minitaur <br>
-						- Roland AX Edge <br>
+						- Moog Minitaur bass synth<br>
+						- Roland AX Edge keytar <br>
+						- Roland Fantom 07 76 key synth <br>
 						- Roland RD-2000 88 weighted key <br>
 						- Yamaha Reface YC Organ <br>
 						<br>
-						- Marshall Origin 20 tube amplifier <br>
-						- Peavey 6505+ tube amplifier <br>
-						- Suhr 100W Reactive Loadbox <br>
-						- Hughes & Kettner Spirit of Rock <br>
-						- Orange Micro Dark <br>
+						- Marshall Origin 20W tube amplifier (8ohm) <br>
+						- Peavey 6505+ 60W tube amplifier (4ohm)<br>
+						- Suhr 100W Reactive Loadbox (8ohm)<br>
+						- Hughes & Kettner Spirit of Rock 50W (4ohm)<br>
+						- Orange Micro Dark 25W (8ohm)<br>
 						<br>
 						- Behringer X-Touch motorized fader surface <br>
 						- Boss HM2 & MT2 overdrive pedals <br>
