--- a/equipment/index.html
+++ b/equipment/index.html
@@ -102,7 +102,7 @@
 						- ElectroVoice N/D 257A <br>
 						- ElectroVoice RE20 & RE320 <br>
 						- MXL R144 (x2) <br>
-						- Shure SM57 & SM58 <br>
+						- Shure SM57 (x3) & SM58 <br>
 						- Shure SM7b <br>
 					</h6>
 				</div>
@@ -127,6 +127,7 @@
 						<br>
 						- ART Pro VLA II <br>
 						- AudioScape SSL Bus Compressor <br>
+						- Cranborne Camden Preamp (x2) <br>
 						- DIYRE CP5 preamp<br>
 						- LA Audio MLX20 dual preamp <br>
 						- N-SONIC N73 Preamp (Neve style)<br>
@@ -147,6 +148,7 @@
 						- Roland RD-2000 88 weighted key <br>
 						<br>
 						- Marshall Origin 20W tube amplifier (8ohm) <br>
+						- Peavey MAX 115 300W combo bass amplifier <br>
 						- Peavey 6505+ 60W tube amplifier (4ohm)<br>
 						- Suhr 100W Reactive Loadbox (8ohm)<br>
 						- Hughes & Kettner Spirit of Rock 50W (4ohm)<br>
@@ -156,12 +158,14 @@
 						- Boss HM2 & MT2 overdrive pedals <br>
 						- Boss RC-20 Loop Pedal <br>
 						- Electro-Harmonix Big Muff fuzz pedal (Soviet era) <br>
+						- Fender Hello Kitty Fuzz <br>
 						- Joyo Tauren (Klon clone) <br>
 						- Maschine MK1 pad controller <br>
 						- Radial ProRMP Reamp box <br>
 						- Radial ProDI Passive DI <br>
 						- RNDI Active DI <br>
-						
+						- ART PD2 2ch Passive DI (x2) <br>
+						- ART BT-DI Bluetooth DI box <br>						
 					</h6>
 				</div>
 			</div>
