--- a/equipment/index.html
+++ b/equipment/index.html
@@ -123,7 +123,9 @@
 						- Yorkville YSM6 with SonarWorks <br>
 						- Technics 3-way HiFi speakers <br>
 						- ART 4ch headphone amplifier <br>
-						- Audio-Technica ATH-M50x headphones <br>
+						- Audio-Technica ATH-M50x headphones (x2) <br>
+						- Bose QC25 headphones <br>
+						- Sennheiser HD518 headphones <br>
 						<br>
 						- ART Pro VLA II <br>
 						- AudioScape SSL Bus Compressor <br>
