--- a/equipment/index.html
+++ b/equipment/index.html
@@ -176,15 +176,17 @@
 		<div class="text-center">
 			<h3>Software</h3><br>
 			<h6>
-				- FabFilter suite (Q3, C2, L2, R, MB, Saturn, Timeless) <br>
+				- FabFilter suite (Q4, C2, L2, R, MB, Saturn, Timeless) <br>
 				- Harrison MixBus<br>
 				- Izotope (Ozone, Nectar, Neutron, RX, VocalSynth, Trash)<br>
 				- Native Instruments (Kontakt, Battery)<br>
 				- Neural DSP (Plini, Petrucci, Rabea)<br>
 				- Oeksound (Soothe2, Spiff)<br>
 				- Reaper<br>
-				- Softsynths (Equator2, Mercury6, Massive, MassiveX)<br>
+				- Softsynths (Absynth 5, Equator2, FM8, Mercury6, Massive, MassiveX, SWAM Strings)<br>
 				- SonarWorks SoundID room & headphone correction <br>
+				- SubMission Audio Flatline 2 <br>
+				- Synchro Arts VocAlign 6 <br>
 				- SSL Native Bus Compressor & Channel Strip <br>
 				- Universal Audio (1176, DBX160, Fairchild, LA2A, Plate Verb) <br>
 				And more! Too much to fit on here.
