--- a/contact/index.html
+++ b/contact/index.html
@@ -76,11 +76,10 @@
 			<div class="text-center">
 				<h2>Contact</h2>	
 				<h6>All services require a minimum 30%, non-refundable deposit paid 24 hours prior to session start time. <br>
-				Failure to pay in advance, or sessions booked less than 24 hours in advance are subject to a 10% markup in service cost.<br>
-				Re-booking for a no-show requires a 50% down deposit.</h6>
+				Failure to pay in advance, or sessions booked less than 24 hours in advance are subject to a 10% markup in service cost.<br></h6>
 				<br>
 				<b><u><h4>Recording</b> </u></h4>
-				<p style="color:white">$75 / hr, $450 / day (Price includes engineer)</p> 
+				<p style="color:white">$70 / hr, $450 / day (Price includes engineer)</p> 
 				<b><u><h4>Mixing & Mastering </b>  </u></h4>
 				<p style="color:white">$250 / song, 3 revisions included. </p>
 				<b><u><h4>Keyboard & Sax session work </b>  </u></h4>
