--- a/contact/index.html
+++ b/contact/index.html
@@ -81,7 +81,9 @@
 				<b><u><h4>Recording</b> </u></h4>
 				<p style="color:white">$70 / hr, $450 / day (Price includes engineer)</p> 
 				<b><u><h4>Mixing & Mastering </b>  </u></h4>
-				<p style="color:white">$250 / song, 3 revisions included. Mixing only: $200 / song. Mastering only: $70 / song. </p>
+				<p style="color:white">$250 / song, 3 revisions included. <br>
+					Mixing only: $200 / song. <br>
+					Mastering only: $70 / song. </p>
 				<b><u><h4>Keyboard & Sax session work </b>  </u></h4>
 				
 				<p style="color:white">$250 / song minimum</p><br><br>
