--- a/equipment/index.html
+++ b/equipment/index.html
@@ -175,7 +175,10 @@
 		<div class="text-center">
 			<h3>Software</h3><br>
 			<h6>
-				- FabFilter suite (Q4, C2, L2, R, MB, Saturn, Timeless) <br>
+				- Black Salt Audio Silencer <br>
+				- Bogren Digital (Krimh Drums, Bassknob STD, 5169 ampknob) <br>
+				- FabFilter suite (Q3&4, C2, L2, R, MB, Saturn, Timeless) <br>
+				- Flight Audio BinauralDSP <br>
 				- Harrison MixBus<br>
 				- Izotope (Ozone, Nectar, Neutron, RX, VocalSynth, Trash)<br>
 				- Native Instruments (Kontakt, Battery)<br>
@@ -188,6 +191,7 @@
 				- Synchro Arts VocAlign 6 <br>
 				- SSL Native Bus Compressor & Channel Strip <br>
 				- Universal Audio (1176, DBX160, Fairchild, LA2A, Plate Verb) <br>
+				- URM (ChannelMate, LimiTilt, MiniClip, TrimPan) <br>
 				And more! Too much to fit on here.
 			</h6>
 		</div>
