--- a/equipment/index.html
+++ b/equipment/index.html
@@ -91,7 +91,7 @@
 						- MXL V69 Mogami <br>
 						- Sonarworks omni mic <br>
 						- Warm Audio WA-251 <br>
-						- Warm Audio WA84 Stereo<br>
+						- Warm Audio WA84 (x2, matched pair)<br>
 					</h6>
 				</div>
 				<div class="col-right">
