--- a/equipment/index.html
+++ b/equipment/index.html
@@ -189,6 +189,7 @@
 				- SubMission Audio Flatline 2 <br>
 				- Synchro Arts VocAlign 6 <br>
 				- SSL Native Bus Compressor & Channel Strip <br>
+				- ToonTrack Superior Drummer 3 <br>
 				- Universal Audio (1176, DBX160, Fairchild, LA2A, Plate Verb) <br>
 				- URM (ChannelMate, LimiTilt, MiniClip, TrimPan) <br>
 				And more! Too much to fit on here.
