--- a/equipment/index.html
+++ b/equipment/index.html
@@ -156,13 +156,13 @@
 						- Hughes & Kettner Spirit of Rock 50W (4ohm)<br>
 						- Orange Micro Dark 25W (8ohm)<br>
 						<br>
-						- Behringer X-Touch motorized fader surface <br>
 						- Boss HM2 & MT2 overdrive pedals <br>
 						- Boss RC-20 Loop Pedal <br>
 						- Electro-Harmonix Big Muff fuzz pedal (Soviet era) <br>
 						- Fender Hello Kitty Fuzz <br>
 						- Joyo Tauren (Klon clone) <br>
 						- Maschine MK1 pad controller <br>
+						- PreSonus Faderport 16 <br>
 						- Radial ProRMP Reamp box <br>
 						- RNDI Active DI <br>
 						- ART PD2 2ch Passive DI (x2) <br>
@@ -183,6 +183,7 @@
 				- Native Instruments (Kontakt, Battery)<br>
 				- Neural DSP (Plini, Petrucci, Rabea)<br>
 				- Oeksound (Soothe2, Spiff)<br>
+				- PreSonus Studio One <br>
 				- Reaper<br>
 				- Softsynths (Absynth 5, Equator2, FM8, Mercury6, Massive, MassiveX, SWAM Strings)<br>
 				- SonarWorks SoundID room & headphone correction <br>
