--- a/equipment/index.html
+++ b/equipment/index.html
@@ -91,7 +91,8 @@
 						- MXL V69 Mogami <br>
 						- Sonarworks omni mic <br>
 						- Warm Audio WA-251 <br>
-						- Warm Audio WA84 (x2, matched pair)<br>
+						- Warm Audio WA-47jr <br>
+						- Warm Audio WA-84 (x2, matched pair)<br>
 					</h6>
 				</div>
 				<div class="col-right">
@@ -100,7 +101,8 @@
 						- AKG D112 <br>
 						- Custom lofi handset phone microphone <br>
 						- ElectroVoice N/D 257A <br>
-						- ElectroVoice RE20 & RE320 <br>
+						- ElectroVoice RE20 <br>
+						- ElectroVoice RE320 <br>
 						- MXL R144 (x2) <br>
 						- Shure SM57 (x3) & SM58 <br>
 						- Shure SM7b <br>
