--- a/equipment/index.html
+++ b/equipment/index.html
@@ -151,12 +151,15 @@
 						- Roland Fantom 07 76 key synth <br>
 						- Roland RD-2000 88 weighted key <br>
 						<br>
+						- Jackson JS22-7 electric <br>
+						- Alvarez acoustic guitar <br>
 						- Marshall Origin 20W tube amplifier (8ohm) <br>
 						- Peavey MAX 115 300W combo bass amplifier <br>
 						- Peavey 6505+ 60W tube amplifier (4ohm)<br>
 						- Suhr 100W Reactive Loadbox (8ohm)<br>
 						- Hughes & Kettner Spirit of Rock 50W (4ohm)<br>
 						- Orange Micro Dark 25W (8ohm)<br>
+						- Line 6 Spider Valve 112 hybrid combo amp<br>
 						<br>
 						- Boss HM2 & MT2 overdrive pedals <br>
 						- Boss RC-20 Loop Pedal <br>
