--- a/equipment/index.html
+++ b/equipment/index.html
@@ -145,6 +145,7 @@
 					<h6>
 						- ASM Hydrasynth <br>
 						- Behringer Model15 semi modular synth <br>
+						- Casio DG-10 digital guitar synthesizer <br>
 						- Expressive E Osmose <br>
 						- Golem Poseidon 4 Theremin <br>
 						- Roland AX Edge keytar <br>
