--- a/equipment/index.html
+++ b/equipment/index.html
@@ -181,16 +181,17 @@
 		<div class="text-center">
 			<h3>Software</h3><br>
 			<h6>
+				- Cubase 14 Pro<br>
+				- Harrison MixBus Pro<br>
+				- PreSonus Studio One Artist 6<br>
+				- Reaper<br>
 				- Black Salt Audio Silencer <br>
 				- Bogren Digital (Krimh Drums, Bassknob STD, 5169 ampknob) <br>
 				- FabFilter suite (Q3&4, C2, L2, R, MB, Saturn, Timeless) <br>
-				- Harrison MixBus<br>
 				- Izotope (Ozone, Nectar, Neutron, RX, VocalSynth, Trash)<br>
 				- Native Instruments (Kontakt, Battery)<br>
 				- Neural DSP (Plini, Petrucci, Rabea)<br>
 				- Oeksound (Soothe2, Spiff)<br>
-				- PreSonus Studio One <br>
-				- Reaper<br>
 				- Softsynths (Absynth 5, Equator2, FM8, Mercury6, Massive, MassiveX, SWAM Strings)<br>
 				- SonarWorks SoundID room & headphone correction <br>
 				- SubMission Audio Flatline 2 <br>
